[tool.poetry]
name = "ea-dataset-provider"
version = "0.1.0"
description = "Small library to simplify collecting and loading of entity alignment benchmark datasets"
authors = ["Daniel Obraczka <obraczka@informatik.uni-leipzig.de>"]
license = "MIT"
readme = "README.md"
keywords = []
repository = "https://github.com/dobraczka/ea-dataset-provider"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dobraczka/ea-dataset-provider/issues"
"Source" = "https://github.com/dobraczka/ea-dataset-provider"
"Documentation" = "https://ea-dataset-provider.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Sphinx = {version = "^5.0.0", optional = true}
insegel = {version = "^1.3.1", optional = true}
pystow = "^0.4.6"
pandas = "^1.1.5"
moviegraphbenchmark = "^1.0.0"


[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyproject-flake8 = "^0.0.1a4"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
flake8-debugger = "^4.1.2"
flake8-comprehensions = "^3.10.0"
flake8-print = "^5.0.0"
nox-poetry = "^1.0.0"
black = "^22.3.0"
pytest-mock = "^3.7.0"
pydocstyle = "^6.1.1"
flake8-bugbear = "^22.7.1"
darglint = "^1.8.1"


[tool.poetry.extras]
docs = ["sphinx", "insegel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E203, E501, W503, C408, D107, B018, I003"
max-line-length = 88
count = "true"
show-source = "true"
statistics = "true"
strictness = "short"
docstring_style = "sphinx"
per-file-ignores = "tests/*: DAR002"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
reverse_relative = true

